# Anime-Recommendation-System

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  llmops-k8s.yml  main.py  pyproject.toml  requirements.txt  setup.py
app/: app.py
data/: anime_updated.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
utils/: custom_exception.py
